Copyright (C) 2018 Alpha Griffin
@%@~LICENSE~@%@

saw_072818_1 - Clean up wallet management using the new API routines. Add wallet `balance` command.

saw_072718_5 - Misc. installation and documentation fixes.

saw_072718_4 - Another install fix for Linux.

saw_072718_3 - Make missing parent directories when creating config dir.

saw_072718_2 - Installation and documentation fixes.

saw_072718_1 - The beginnings of a command-line interface for ORBIT.
